maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: Boolean does not take parameters
      if (!estFaceMur()()){
                       ^