maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  var hasard=0
	hasard=random3()
  while (!estSurBiscuit()){
    if (hasard==0){
      if (!estFaceMur()()){
        avance()
      }else{
        if(hasard==1){
          gauche()
          if(!estFaceMur()){
            avance()
          }
        }else{
          droite()
          if (!estFaceMur){
            avance()
          }
        }
      }
    }
  }
}